src/App.css
:root {
  /*colors*/
  --background_color: rgb(24, 24, 24);
  --dark_element_background: #212121;
  --background_alpha: 24, 24, 24;
  --background-glass: rgb(24, 24, 24);
  --primary_color: rgb(0, 140, 201);
  --text_primary: rgb(240, 240, 240);
  --secondary_color: rgb(255, 230, 0);
  --text_secondary: rgb(14, 190, 243);
  --accent_color: rgb(0, 120, 255);
  --surface_color: rgb(255, 255, 255);
  --error_color: rgb(14, 190, 243);
  --textbox: rgb(214, 214, 214);
  --textbox_text: rgb(78, 78, 78);
  --send_bubble_color: #00b2ff;
  --send_text_color: rgb(255, 255, 255);
  --receive_bubble_color: #404040;
  --loader_color: #404040;
  --receive_text_color: rgb(240, 240, 240);
  --alert_color: rgb(255, 0, 102);
  /*sizes*/
  --bar_height: 50px;
  --conversation_font_size: 14px;
}

@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap");

body {
  background-color: var(--background_color);
  font-family: "Open Sans", sans-serif;
}

.messages-container {
  background-color: var(--background_color);
}
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: var(--background-glass);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

h1 {
  color: tomato;
}

/* Chat Screen divisions */
.header-backdrop {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  z-index: 5;
  background: linear-gradient(
    180deg,
    var(--background_color) 85%,
    rgba(var(--background_alpha), 0) 100%
  );
  height: auto;
  padding: 12px 0px 28px;
}

.receiver-details {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  /* align-items: baseline; */
  width: 100%;
  color: var(--primary_color) !important;
}

.back-button {
  margin-left: 20px !important;
}

.receiver-name {
  margin-top: 12px;
  font-size: larger;
}

.splits{
  display:flex;
  padding: 8px 32px 10px;
}

.activeSplit{
  color: var(--text_primary);
  background-color: var(--primary_color);
  padding: 10px 16px;
  border-radius: 25px;
  margin-right: 10px;
  transition:all .4s linear;
}

.inactiveSplit{
  color:var(--primary_color);
  padding: 10px 16px;
  border-radius: 25px;
  margin-right: 10px;
}

.ndot{
  display: inline-block;
  position: absolute;
  content: " ";
  height: 5px;
  width: 5px;
  background-color: var(--alert_color);
  border-radius: 100%;
  margin-left: 5px;
  margin-bottom: 18px;
}

.more-messages-circle {
  background-color: var(--dark_element_background);
  padding: 6px;
  border-radius: 100%;
  position: fixed;
  height: 28px;
  width: 28px;
  top: calc(15% + 18px);
  left: calc(50% - 12px);
  z-index: 5;
  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
  -webkit-animation: fadein 0.3s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 0.3s; /* Firefox < 16 */
  -ms-animation: fadein 0.3s; /* Internet Explorer */
  -o-animation: fadein 0.3s; /* Opera < 12.1 */
  animation: fadein 0.3s;
  transition: all ease-in 300ms;
}

.compose-container {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
}

.send-button{
   font-size: small;
   color: var(--primary_color);
   font-weight: 800;
}

.messages-container {
  height: calc(100% - 56px);
  width: 100%;
  display: block;
  overscroll-behavior: contain;
  overflow-y: scroll;
}
/* End of Chat Screen divisions */

/* Main Container */
.page-container {
  height: 100%;
  width: 100%;
  min-width: 0;
  min-height: 100%;
  display: block;
  overscroll-behavior: contain;
  overflow: hidden;
}

/* Router Transitions */
.page-enter {
  opacity: 0;
  transform: scale(0.98);
}

.page-enter-active {
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
  opacity: 1;
  transform: scale(1);
  transition: opacity 300ms, transform 300ms;
}

.page-exit {
  opacity: 1;
  transform: scale(1);
}

.page-exit-active {
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
  opacity: 0;
  transform: scale(0.98);
  transition: opacity 300ms, transform 300ms;
}

.progres-circle {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}
/* End of Router Transitions */

/* Message Bubbles */
.send-bubble {
  padding: 12px;
  margin: 6px;
  margin-right: 14px;
  border-radius: 25px;
  position: relative;
  box-sizing: border-box;
  max-width: 350px;
  display: block;
  float: right;
  background-color: var(--send_bubble_color);
  color: var(--send_text_color);
  font-size: var(--conversation_font_size);
}

.receive-bubble {
  padding: 12px;
  margin: 6px;
  margin-left: 14px;
  border-radius: 25px;
  position: relative;
  box-sizing: border-box;
  max-width: 350px;
  display: block;
  float: left;
  background-color: var(--receive_bubble_color);
  color: var(--receive_text_color);
  font-size: var(--conversation_font_size);
  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
}

.receive-bubble > p,
.send-bubble > p {
  font-size: var(--conversation_font_size);
  word-break: break-word;
}

.bubblewrap {
  display: block;
  float: right;
  width: 100%;
}

.send-bubble {
  color: white;
  margin-left: 25%;
  background: linear-gradient(
    to bottom,
    rgb(0, 140, 201) 0%,
    rgb(0, 75, 107) 100%
  );
  background-attachment: fixed;
  position: relative;
  opacity: 1;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.bubble-dim {
  opacity: 0.5;
}

.first-message {
  margin-top: 50vh;
}

/* End of Message Bubbles */

.MuiTypography-colorTextSecondary,
.MuiSvgIcon-root {
  color: var(--text_primary) !important;
}

.MuiToggleButton-root {
  border: none !important;
  background-color: var(--primary_color) !important;
  border-radius: 25px !important;
  padding: 6px !important;
  padding-right: 12px !important;
  font-size: var(--conversation_font_size) !important;
  margin-right: 8px !important;
  text-transform: unset !important;
}

/* Animations */

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

/* Internet Explorer */
@-ms-keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

/* End of Animations */

.spotify-player {
  margin-top: 24px;
  width: 100%;
  display: flex;
}

